<resources>
    <string name="app_name">MMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_blog">Блог</string>
    <string name="title_messages">Messages</string>
    <string name="title_about_us">About us</string>
    <string name="report">Report</string>
    <string name="title_login">Login</string>
    <string name="title_see_more">See more</string>
    <string name="title_password">Password</string>
    <string name="title_forgot_password">Forgot password?</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_email">Email</string>
    <string name="title_name">Name</string>
    <string name="title_confirm_password">Confirm password</string>
    <string name="message_login_or_password_incorrect">Логин или пароль неверны</string>
    <string name="title_log_out">Log out</string>
    <string name="message_log_out">Do you want to exit?</string>
    <string name="title_ok">Ok</string>
    <string name="title_yes">Yes</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="default_notification_channel_id">mms_notification_channel</string>
    <string name="title_message">Message</string>
    <string name="title_month">Month</string>
    <string name="title_year">Exp year</string>
    <string name="title_cvc">cvc</string>
    <string name="title_card_code">Card code</string>
    <string name="title_pay">Pay</string>
    <string name="title_enter_card_details">Please enter your card details</string>
    <string name="title_card_number_hint">XXXX XXXX XXXX XXXX</string>
    <string name="title_exp_month">Exp month</string>
    <string name="title_choose_subscription_plan">To view this information you need to purchase a subscription. Please choose your plan</string>
    <string name="title_payment">Payment</string>
    <string name="stripe_key">pk_test_Pn1W1uvdzBHljScx2MpprHe3</string>
    <string name="title_error">Error</string>
    <string name="error_operation">An error occurred while performing the operation</string>
    <string name="title_forgot_password_send">We sent password to your email</string>
    <string name="message_operation_finishsuccess">Operation completed successfully</string>
    <string name="your_subscription">Your subscription:</string>
    <string name="title_you_have_not_subscription">You have not any subscriptions</string>
    <string name="title_user">User</string>
    <string name="title_user_details">User details</string>
    <string name="title_secret_page">This is secret page!</string>
</resources>
