<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/title_messages" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_alarm_black_16dp"
            android:title="@string/report" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_info_black_16dp"
            android:title="@string/title_about_us" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/title_about_us" />
    </group>

</menu>
